# SHAvatar

./: README.md  pyproject.toml
shavatar/: __init__.py
